--- a/network/pom.xml
+++ b/network/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
         <jetty.plugin.version>9.4.15.v20190215</jetty.plugin.version>
-        <vaadin.version>14.0.0.rc5</vaadin.version>
+        <vaadin.version>14.0.0.rc6</vaadin.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -59,7 +59,7 @@
     <dependencies>
         <dependency>
             <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-core</artifactId>
+            <artifactId>vaadin</artifactId>
 
             <exclusions>
                 <!-- Webjars are only needed when running in Vaadin 13 compatibility mode -->
