--- a/network/pom.xml
+++ b/network/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.vaadin.componentfactory</groupId>
     <artifactId>network</artifactId>
-    <version>1.1.0</version>
+    <version>1.3.0</version>
 
     <name>Network Component</name>
 
@@ -19,7 +19,7 @@
 
     <properties>
         <jetty.plugin.version>9.4.15.v20190215</jetty.plugin.version>
-        <vaadin.version>14.0.1</vaadin.version>
+        <vaadin.version>14.4.4</vaadin.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -92,23 +92,15 @@
 
     </dependencies>
 
-    <licenses>
-        <license>
-            <name>CVALv3</name>
-            <url>https://vaadin.com/license/cval-3</url>
-        </license>
-    </licenses>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>1.8</version>
+                <version>2.0.0</version>
                 <!--  Use `mvn license:update-file-header` to fix header problems -->
                 <configuration>
-                    <licenseName>cval3</licenseName>
-                    <licenseResolver>${project.baseUri}src/license</licenseResolver>
+                    <licenseName>apache_v2</licenseName>
                     <includes>
                         <include>**/main/**/*.java</include>
                     </includes>
